--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,9 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: 'SampleWebApiAspNetCore/*.csproj'
+    feedsToUse: 'select'
+
