--- a/SampleWebApiAspNetCore/Dockerfile
+++ b/SampleWebApiAspNetCore/Dockerfile
@@ -1,3 +1,4 @@
 FROM microsoft/aspnetcore:2.0
+COPY SampleWebApiAspNetCore/bin/Release/net5.0/ app/
 WORKDIR /app
-ENTRYPOINT ["dotnet", "SampleWebApiAspNetCore\bin\Release\net5.0\SampleWebApiAspNetCore.dll"]
+ENTRYPOINT ["dotnet", "SampleWebApiAspNetCore.dll"]
