--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
-    projects: '*.csproj'
+    projects: 'SampleWebApiAspNetCore/*.csproj'
     feedsToUse: 'select'
 - task: DotNetCoreCLI@2
   inputs:
