--- a/SampleWebApiAspNetCore/Dockerfile
+++ b/SampleWebApiAspNetCore/Dockerfile
@@ -1,4 +1,4 @@
 FROM microsoft/aspnetcore:2.0
-COPY SampleWebApiAspNetCore/bin/Release/net5.0/ app/
+COPY SampleWebApiAspNetCore\bin\Release\net5.0\SampleWebApiAspNetCore.dll app.dll
 WORKDIR /app
-ENTRYPOINT ["dotnet", "SampleWebApiAspNetCore.dll"]
+ENTRYPOINT ["dotnet", "app.dll"]
